--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <section class="container">
     <h2>Our Restaurant Menu</h2>
     <div class="menu">
-      <a class="active" href="#">Main</a>
+      <a class="active-link" href="#">Main</a>
       <a href="#">Desserts</a>
       <a href="#">Drinks</a>
     </div>
     <div class="tabs-content">
-      <div class="menu-list main">
+      <div class="menu-list active">
         <div class="menu-list-dish">
           <div class="price">$25.89</div>
           <div class="name"><a class="name-link" href="#">Osso Buco</a></div>
@@ -27,9 +27,15 @@
           <div class="name"><a class="name-link" href="#">Pappardelle Mimmo</a></div>
           <p class="about">This delicious dish tops long, wide pasta with scallops, lobster, asparagus, butter, sage
             and truffle oil to cater every palate.</p>
-        </div>  
+        </div>
+        <div class="menu-list-dish">
+          <div class="price">$16.89</div>
+          <div class="name"><a class="name-link" href="#">Pappardelle Mimmo</a></div>
+          <p class="about">This delicious dish tops long, wide pasta with scallops, lobster, asparagus, butter, sage
+            and truffle oil to cater every palate.</p>
+        </div>
       </div>
-      <div class="menu-list desserts">
+      <div class="menu-list">
         <div class="menu-list-dish">
           <div class="price">$20.89</div>
           <div class="name"><a class="name-link" href="#">Tiramisu</a></div>
@@ -41,9 +47,15 @@
           <div class="name"><a class="name-link" href="#">Cannoli</a></div>
           <p class="about">Trio tower of cannoli filled with smooth ricotta, sugar & cinnamon, with chocolate &
             raspberry sauces. Single cannoli is also available.</p>
-        </div>    
+        </div>
+        <div class="menu-list-dish">
+          <div class="price">$16.89</div>
+          <div class="name"><a class="name-link" href="#">Pappardelle Mimmo</a></div>
+          <p class="about">This delicious dish tops long, wide pasta with scallops, lobster, asparagus, butter, sage
+            and truffle oil to cater every palate.</p>
+        </div>
       </div>
-      <div class="menu-list drinks">
+      <div class="menu-list">
         <div class="menu-list-dish">
           <div class="price">$10.89</div>
           <div class="name"><a class="name-link" href="#">Aperol Spritz</a></div>
@@ -55,7 +67,13 @@
           <div class="name"><a class="name-link" href="#">Negroni</a></div>
           <p class="about">Reward yourself with a moment of relaxation & pure pleasure while enjoying the full flavour
             & simplicity of a Negroni, an iconic Italian cocktail.</p>
-        </div>    
+        </div>
+        <div class="menu-list-dish">
+          <div class="price">$16.89</div>
+          <div class="name"><a class="name-link" href="#">Pappardelle Mimmo</a></div>
+          <p class="about">This delicious dish tops long, wide pasta with scallops, lobster, asparagus, butter, sage
+            and truffle oil to cater every palate.</p>
+        </div>
       </div>
     </div>    
   </section>
