--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
           <p class="about">The most popular drink in Venice: refreshing, easygoing &…happy! Perfect to be sipped as an
             “Aperitivo” just before dinner - delightful!</p>
         </div>
-        <div class="menu-list-dish 
+        <div class="menu-list-dish">
           <div class="price">$9.89</div>
           <div class="name"><a class="name-link" href="#">Negroni</a></div>
           <p class="about">Reward yourself with a moment of relaxation & pure pleasure while enjoying the full flavour
             & simplicity of a Negroni, an iconic Italian cocktail.</p>
         </div>
         <div class="menu-list-dish">
-          <div class="price">$16.89</div>
-          <div class="name"><a class="name-link" href="#">Pappardelle Mimmo</a></div>
-          <p class="about">This delicious dish tops long, wide pasta with scallops, lobster, asparagus, butter, sage
-            and truffle oil to cater every palate.</p>
+          <div class="price">$9.89</div>
+          <div class="name"><a class="name-link" href="#">Negroni</a></div>
+          <p class="about">Reward yourself with a moment of relaxation & pure pleasure while enjoying the full flavour
+            & simplicity of a Negroni, an iconic Italian cocktail.</p>
         </div>
       </div>
     </div>    
