--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <section class="container">
     <h2>Our Restaurant Menu</h2>
-    <div class="menu">
-      <a class="active-link" href="#">Main</a>
-      <a href="#">Desserts</a>
-      <a href="#">Drinks</a>
-    </div>
+    <nav class="menu">
+      <a class="active-link menu-link js-tab-toggle" href="#tab=1">Main</a>
+      <a class="menu-link js-tab-toggle" href="#tab=2">Desserts</a>
+      <a class="menu-link js-tab-toggle" href="#tab=3">Drinks</a>
+    </nav>
     <div class="tabs-content">
       <div class="menu-list active">
         <div class="menu-list-dish">
